# Direct-Message-Exchange-Protocol

./: .gitignore  Cargo.toml  README.md
Tests/: MemoryAloc_test.rs
src/: main.rs
src/Aloc/: Aloc.rs  mod.rs
src/Aloc/Channels/: Aloc.rs  ChannelConfig.rs  Structs.rs  mod.rs
src/CRUD/: CRUD.rs
src/ICP/: mod.rs  structs.rs
src/Utils/: Alocutils.rs  mod.rs
